# custom_scheduler

./: .gitignore  Model_testing.ipynb  Model_testing_from_file.ipynb  Pending Requests.ipynb  Performance Tests From File-Copy1.ipynb  Performance Tests From File.ipynb  README.md  Request Generation.ipynb  ScheduleSimulator.py  Scheduler_Testing.ipynb  Variable Windows Test.ipynb  _Run Simulations (PC).ipynb  __ANALYSIS_1m_data.ipynb  __ANALYSIS_2m_data.ipynb  __ANALYSIS_all_data.ipynb  _testing.ipynb  crawling_lco_schedule.ipynb  generate_requests_v2.py  generate_requests_v3.py  generate_requests_v4.py  input_file_constructor.ipynb  main.py  multi_run_scheduler.py  multirun_scheduler_prototyping.ipynb  performance_tests.ipynb  prototyping_simulator.ipynb  pyproject.toml  sample_input.json  scheduler_cpsat.py  scheduler_gurobi.py  scheduler_highs.py  scheduler_pulp.py  scheduler_utils.py  scheduler_v1.py  scheduler_v2.py  scheduler_v4.py  scrapbook.ipynb  telescope_times.json  test.txt  test_priority_bands.py  (+4 more)
data/: observation_patterns_v1.json
import_tests/: gurobi_example.py  import_libraries.py
input_files/: input_uuids.json
outdated_files/: Alternative_Optimisers_OUTDATED.ipynb  Model_testing.ipynb  Model_testing_OUTDATED.ipynb  Pulp_Model_Test.ipynb  Testing_PuLP_Integration.ipynb  generate_requests_v1.py  generate_requests_v2.py  performance_tests.ipynb  performance_tests_from_file_TEST.ipynb  scheduler_highs_OLD.py  scheduler_v3.py  scheduler_v4.py  test_template.py  test_template_from_file - OLD.py
sample_input/: sample_input_0.json  sample_input_100r.json  (+10 more)
(+68 files in other folders)
