[tool.poetry]
name = "custom-scheduler"
version = "0.1.0"
description = ""
authors = ["Elliott Fogg <elliott.fogg@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.25.0"
python-dateutil = "^2.8.2"
unidecode = "^1.3.6"
lcogt-logging = "^0.3.2"
scipy = "^1.11.1"
retry = "^0.9.2"
time-intervals = "^1.0.0"
gurobipy = "^10.0.2"
jupyter = "^1.0.0"
pulp = "^2.7.0"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
jupyter-contrib-nbextensions = "^0.7.0"
highspy = "^1.5.3"
cylp = "^0.92.2"
cvxpy = "^1.4.2"
pyscipopt = "^4.4.0"
cvxopt = "^1.3.2"
ortools = "^9.8.3296"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
